{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 1381,
  "lineage": "f4aa5f2a-6487-16ac-d600-fd3197a09b23",
  "resources": [
    {
      "mode": "data",
      "type": "kubernetes_ingress",
      "name": "address",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": null,
            "metadata": null,
            "spec": null,
            "status": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.kubernetes",
      "mode": "managed",
      "type": "kubernetes_ingress",
      "name": "app",
      "provider": "module.kubernetes.provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "fargate-node/owncloud-lb",
            "metadata": [
              {
                "annotations": {
                  "alb.ingress.kubernetes.io/scheme": "internet-facing",
                  "alb.ingress.kubernetes.io/target-type": "ip",
                  "kubernetes.io/ingress.class": "alb"
                },
                "generate_name": "",
                "generation": 1,
                "labels": {
                  "app": "owncloud"
                },
                "name": "owncloud-lb",
                "namespace": "fargate-node",
                "resource_version": "5605",
                "uid": "b29a9c3b-bf57-4966-a17a-61889ec8c9d0"
              }
            ],
            "spec": [
              {
                "backend": [
                  {
                    "service_name": "owncloud-service",
                    "service_port": "80"
                  }
                ],
                "ingress_class_name": "",
                "rule": [
                  {
                    "host": "",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "service_name": "owncloud-service",
                                "service_port": "80"
                              }
                            ],
                            "path": "/"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": []
                  }
                ]
              }
            ],
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kubernetes.data.aws_eks_cluster.cluster",
            "module.kubernetes.data.aws_eks_cluster_auth.cluster",
            "module.kubernetes.kubernetes_deployment.app",
            "module.kubernetes.kubernetes_namespace.fargate",
            "module.kubernetes.kubernetes_service.app"
          ]
        }
      ]
    },
    {
      "module": "module.kubernetes",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "fargate",
      "provider": "module.kubernetes.provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "fargate-node",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "owncloud"
                },
                "name": "fargate-node",
                "resource_version": "5152",
                "uid": "0e979565-b402-42a0-be7c-9a7efb62734c"
              }
            ]
          },
          "dependencies": [
            "module.kubernetes.data.aws_eks_cluster.cluster",
            "module.kubernetes.data.aws_eks_cluster_auth.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.kubernetes",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "app",
      "provider": "module.kubernetes.provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "fargate-node/owncloud-server",
            "metadata": [
              {
                "generation": 0,
                "name": "owncloud-server",
                "namespace": "fargate-node",
                "resource_version": "5601",
                "uid": "44d5ba31-088a-4537-bbab-db9b54f1bc64"
              }
            ],
            "spec": [
              {
                "cluster_ip": "10.100.185.207",
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 30649,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "80"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "owncloud"
                },
                "session_affinity": "None",
                "type": "NodePort"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "module.kubernetes.data.aws_eks_cluster.cluster",
            "module.kubernetes.data.aws_eks_cluster_auth.cluster",
            "module.kubernetes.kubernetes_deployment.app",
            "module.kubernetes.kubernetes_namespace.fargate"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04b3c30df35fda33b",
            "association_id": "eipassoc-0ac3fc025876763f5",
            "domain": "vpc",
            "id": "eipalloc-04b3c30df35fda33b",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-06fd971a3eded98b3",
            "private_dns": "ip-192-168-0-230.eu-west-1.compute.internal",
            "private_ip": "192.168.0.230",
            "public_dns": "ec2-52-19-248-153.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.19.248.153",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0491cd097f7cf2a20",
            "association_id": "eipassoc-0a3547ac242ce8f19",
            "domain": "vpc",
            "id": "eipalloc-0491cd097f7cf2a20",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0255c511d3465db71",
            "private_dns": "ip-192-168-1-132.eu-west-1.compute.internal",
            "private_ip": "192.168.1.132",
            "public_dns": "ec2-52-213-81-236.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.213.81.236",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:741032333307:internet-gateway/igw-0d26a9423209303a5",
            "id": "igw-0d26a9423209303a5",
            "owner_id": "741032333307",
            "tags": {
              "Name": "eks-internet-gateway-testing"
            },
            "tags_all": {
              "Name": "eks-internet-gateway-testing"
            },
            "vpc_id": "vpc-0d09fe29c02258f8d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04b3c30df35fda33b",
            "connectivity_type": "public",
            "id": "nat-0e4f5cc4b6d5a8507",
            "network_interface_id": "eni-06fd971a3eded98b3",
            "private_ip": "192.168.0.230",
            "public_ip": "52.19.248.153",
            "subnet_id": "subnet-024836a9ea3639b80",
            "tags": {
              "Name": "eks-nat_Gateway-1-testing"
            },
            "tags_all": {
              "Name": "eks-nat_Gateway-1-testing"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0491cd097f7cf2a20",
            "connectivity_type": "public",
            "id": "nat-0f58879482dde89eb",
            "network_interface_id": "eni-0255c511d3465db71",
            "private_ip": "192.168.1.132",
            "public_ip": "52.213.81.236",
            "subnet_id": "subnet-07132273ff581d68d",
            "tags": {
              "Name": "eks-nat_Gateway-2-testing"
            },
            "tags_all": {
              "Name": "eks-nat_Gateway-2-testing"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "internet-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:741032333307:route-table/rtb-027712627703b922d",
            "id": "rtb-027712627703b922d",
            "owner_id": "741032333307",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d26a9423209303a5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-public_route_table-testing",
              "state": "public"
            },
            "tags_all": {
              "Name": "eks-public_route_table-testing",
              "state": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d09fe29c02258f8d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:741032333307:route-table/rtb-00189dc726e370558",
            "id": "rtb-00189dc726e370558",
            "owner_id": "741032333307",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0e4f5cc4b6d5a8507",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-nat_route_table-1-testing",
              "state": "public"
            },
            "tags_all": {
              "Name": "eks-nat_route_table-1-testing",
              "state": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d09fe29c02258f8d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_nat_gateway.gw",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:741032333307:route-table/rtb-0ef14b2478fe25a3e",
            "id": "rtb-0ef14b2478fe25a3e",
            "owner_id": "741032333307",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0f58879482dde89eb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-nat_route_table-2-testing",
              "state": "public"
            },
            "tags_all": {
              "Name": "eks-nat_route_table-2-testing",
              "state": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d09fe29c02258f8d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_nat_gateway.gw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-034d2244322eb8d3d",
            "route_table_id": "rtb-00189dc726e370558",
            "subnet_id": "subnet-0d66c02bcf661c823"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.gw",
            "module.vpc.aws_route_table.nat-route",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0374a1c225f4328ef",
            "route_table_id": "rtb-0ef14b2478fe25a3e",
            "subnet_id": "subnet-0e860d02c6019b9d2"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.gw",
            "module.vpc.aws_route_table.nat-route",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c6916f6ab661b91",
            "route_table_id": "rtb-027712627703b922d",
            "subnet_id": "subnet-024836a9ea3639b80"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_route_table.internet-route",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-023b1fc7e5e1be61f",
            "route_table_id": "rtb-027712627703b922d",
            "subnet_id": "subnet-07132273ff581d68d"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_route_table.internet-route",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:741032333307:subnet/subnet-0d66c02bcf661c823",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "192.168.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d66c02bcf661c823",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "741032333307",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fargate-subnet-1-testing",
              "kubernetes.io/cluster/ekstest-testing": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "state": "private"
            },
            "tags_all": {
              "Name": "fargate-subnet-1-testing",
              "kubernetes.io/cluster/ekstest-testing": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "state": "private"
            },
            "vpc_id": "vpc-0d09fe29c02258f8d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:741032333307:subnet/subnet-0e860d02c6019b9d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "192.168.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e860d02c6019b9d2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "741032333307",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fargate-subnet-2-testing",
              "kubernetes.io/cluster/ekstest-testing": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "state": "private"
            },
            "tags_all": {
              "Name": "fargate-subnet-2-testing",
              "kubernetes.io/cluster/ekstest-testing": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "state": "private"
            },
            "vpc_id": "vpc-0d09fe29c02258f8d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:741032333307:subnet/subnet-024836a9ea3639b80",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "192.168.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-024836a9ea3639b80",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "741032333307",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "node-group-subnet-1-testing",
              "kubernetes.io/cluster/ekstest-testing": "shared",
              "kubernetes.io/role/elb": "1",
              "state": "public"
            },
            "tags_all": {
              "Name": "node-group-subnet-1-testing",
              "kubernetes.io/cluster/ekstest-testing": "shared",
              "kubernetes.io/role/elb": "1",
              "state": "public"
            },
            "vpc_id": "vpc-0d09fe29c02258f8d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:741032333307:subnet/subnet-07132273ff581d68d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07132273ff581d68d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "741032333307",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "node-group-subnet-2-testing",
              "kubernetes.io/cluster/ekstest-testing": "shared",
              "kubernetes.io/role/elb": "1",
              "state": "public"
            },
            "tags_all": {
              "Name": "node-group-subnet-2-testing",
              "kubernetes.io/cluster/ekstest-testing": "shared",
              "kubernetes.io/role/elb": "1",
              "state": "public"
            },
            "vpc_id": "vpc-0d09fe29c02258f8d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:741032333307:vpc/vpc-0d09fe29c02258f8d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0762bf3d0243d9db4",
            "default_route_table_id": "rtb-0077f6daa0e32fd19",
            "default_security_group_id": "sg-03d9486db54399a0d",
            "dhcp_options_id": "dopt-02510964d5e3ba8d4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0d09fe29c02258f8d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0077f6daa0e32fd19",
            "owner_id": "741032333307",
            "tags": {
              "Name": "main-testing-vpc",
              "kubernetes.io/cluster/ekstest-testing": "shared"
            },
            "tags_all": {
              "Name": "main-testing-vpc",
              "kubernetes.io/cluster/ekstest-testing": "shared"
            }
          }
        }
      ]
    }
  ]
}